--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- <script src="../node_modules/video.js/dist/video.min.js"></script>
+  <script src="../dist/Youtube.min.js"></script> -->
 </body>
 </html>
